Tuned the Chronicle Benchmark